data/diff_tests/wasmtime/nop_IncorrectHandlingofControlFlowAcrossModuleBoundaries_804.wast.bin.wast
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\84\80\80\80\00\01\60"
    "\00\00\02\8b\80\80\80\00\01\03\65\6e\76\03\66\6f"
    "\6f\00\00\03\82\80\80\80\00\01\00\07\8c\80\80\80"
    "\00\01\08\65\78\70\6f\72\74\65\64\00\01\0a\90\80"
    "\80\80\00\01\8a\80\80\80\00\00\10\00\01\10\00\01"
    "\10\00\0b"
  )
""
)